--- a/src/main/resources/template.html
+++ b/src/main/resources/template.html
@@ -30,6 +30,10 @@
                 border: none;
             }
 
+            ul {
+                padding-left: 0.5rem;
+            }
+
             h3, h2, h1, h4, h5, h6 {
                 display: inline-block;
             }
